[FIX] web, *: x2many list horizontal overflow
This issue only occurs on Firefox because ´has´ is not supported
and the following rule is not applied:
https://github.com/odoo/odoo/commit/2cd0106e63785dd34553c2b4747d72b93b9a7afd

Anyway, there is an existing css rule that is applied if the field
class is correclty added.

Steps to reproduce:
- Open Sale
- Add some content in the sale order line

opw-3201461
opw-3285854
opw-3266130
opw-3244581

X-original-commit: 77b090156c9ecf1907629511c5da1d33476b5924

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -597,10 +597,6 @@
                         }
                     }
                 }
-                // Prevent table overflow when having long chars in x2many list
-                .o_field_widget:has(.o_field_x2many.o_field_x2many_list) {
-                    width: 100%;
-                }
             }
         }
 
